tests/NormalTests/paczka2/big_fuzzy/43186490.err
Error in line 13: wOdOv A213 74,59
Error in line 11: 6GmAf9H A213 73,0
Error in line 16: 6GmAf9H S257 27,5
Error in line 17: 6GmAf9H A671 40,2
Error in line 8: oJLlaCP9Pxr S963 164,0
Error in line 25: 6GmAf9H S257 53,07
Error in line 20: 6GmAf9H S257 12,7
Error in line 42: ipht69L0T S257 46,5
Error in line 43: S963 S257 28,7
Error in line 66: 6GmAf9H A213 269,7
Error in line 68: 6GmAf9H A671 84,3
Error in line 72: oJLlaCP9Pxr S963 11,1
Error in line 79: m33sp S963 19,8
Error in line 76: oJLlaCP9Pxr A671 90,1
Error in line 92: m33sp A671 15,3
Error in line 104: wOdOv S963 79,2
Error in line 106: oJLlaCP9Pxr A671 15,1
Error in line 120: vwaLoYvA S963 97,5
Error in line 119: m33sp A213 77,9
Error in line 131: m33sp S257 59,6
Error in line 133: m33sp A671 1,0
Error in line 141: 6GmAf9H A213 87,8
Error in line 142: 6GmAf9H A671 58,2
Error in line 140: m33sp S963 3,2
Error in line 152: m33sp A213 85,1
Error in line 156: wOdOv S963 9,8
Error in line 159: 6GmAf9H S963 92,5
Error in line 162: m33sp A671 42,8
Error in line 168: oJLlaCP9Pxr S257 34,3
Error in line 163: 6GmAf9H A213 21,9
Error in line 154: S963 S257 91,8
Error in line 171: oJLlaCP9Pxr A213 44,2
Error in line 177: wOdOv A213 31,0
Error in line 182: wOdOv S963 21,5
Error in line 179: S963 A671 86,9
Error in line 184: S963 A213 90,1
Error in line 183: wOdOv A671 25,5
Error in line 185: S963 S963 31,3
Error in line 186: ipht69L0T A671 33,7
Error in line 199: ipht69L0T A213 84,4
Error in line 201: m33sp S963 18,5
Error in line 215: S963 A671 57,5
Error in line 213: wOdOv A213 45,5
Error in line 224: S963 A213 92,7
Error in line 225: S963 S257 87,5
Error in line 226: S963 A213 27,1
Error in line 233: ipht69L0T S257 9,7
Error in line 246: i½ht69L0T A213 88,3
Error in line 243: S963 A671 12,3
Error in line 250: S963 S963 -1,3
